examples/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: [appname]
spec:
  replicas: 2
  selector:
    matchLabels:
      app: [appname]
  template:
    metadata:
      labels:
        app: [appname]
    spec:
      containers:
      - name: [appname]
        image: gcr.io/google_containers/echoserver:1.3
        ports:
        - containerPort: 8000
        resources:
          requests:
            memory: "64Mi"
            cpu: "200m"
          limits:
            memory: "128Mi"
            cpu: "300m"
