examples/appservice.yml
apiVersion: v1
kind: Service
metadata:
  name: [appname]
  labels:
    app: [appname]
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: [appname]
